# RedoxQL

./: .gitignore  Cargo.toml  Makefile  README.md  __main__.py  exam_tester_m1.py  exam_tester_m3_part1.py  local_pr_tester.sh  main_checking.py  minimal_test.py  pyproject.toml  regress.md  requirements.txt  run_all_tests.sh  simpleAbortTest.py  simple_durability.py  simple_test.py  simple_tester.py  table.data  testAbort.py  testM2.py  testM3.py  warmup.md
.github/workflows/: miri.yml  python.yml  rust.yml
benches/: db_benchmark.rs  merge_benchmarks.rs  page_benchmarks.rs  page_dir_benchmarks.rs  query_benchmarks.rs
demo-project/: .gitignore  main.py  requirements.txt
docs/: old-system-diagrams.md
python/benchmarks/: db_test_out.py  db_test_transaction.py  graph_scale.py  one_hunderd_thousand_ops.py  scaling_tester.py  simple_example.py  simple_tester.py  speedtests.py  test_repr.py
python/examples/: python_problematic.py  simple_update_durability.py
python/extra/: git_bisect_experiment.md
python/lstore/: __init__.py  db.py  index.py  query.py  table.py  transaction.py  transaction_worker.py
python/py-opt/: cpython-vs-pypy.md  disassemble_update.py
redoxdata/: .empty
src/: bufferpool.rs  container.rs  database.rs  filewriter.rs  index.rs  lib.rs  page.rs  pagerange.rs  query.rs  record.rs  system.rs  table.rs  transaction.rs  transaction_worker.rs  utils.rs
src/old/: database.rs  index.rs  page.rs  query.rs
tests/: store_strings_tests.rs  update_tests.rs
