[package]
name = "lstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lstore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
lstore = { path = "." }

[[bench]]
name = "db_benchmark"
harness = false

# Speed improvements
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
