[package]
name = "redoxql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redoxql"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.22.0"
serde = { version = "1.0.218", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
redoxql = { path = "." }

[[bench]]
name = "page_benchmarks"
harness = false

[[bench]]
name = "query_benchmarks"
harness = false

[profile.bench]
debug = true

# Speed improvements
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
